--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     font-family: 'Permanent Marker', cursive;
 }
 
+body{
+    /* background-color: #353839; */
+    background-color: #131313;
+    /* background-color: #12343b; */
+}
+
 .header-container{
     /* margin: 10px; */
     display: flex;
@@ -43,11 +49,11 @@
     display: flex;
     flex-wrap: wrap;
     gap:20px;
-    background-color: #353839;
+    /* background-color: #353839; */
     color:#fff;
 }
 
-.searchbar{
+/* .searchbar{
     width: 400px;
     height: 40px;
     margin-block:10px;
@@ -58,7 +64,84 @@
     padding-inline: 10px;
     margin-left: 3px;
 
-}
+} */
 
-
+.searchbar {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 4px;
+    font-size: 16px;
+  }
   
+  .search-btn {
+    width: 10%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 2px solid black;
+    border-radius: 4px;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.15s ease-in-out;
+  }
+  .search-btn:hover {
+    background-color: white;
+    color: black;
+  }
+.footer{
+    background:#000;
+    padding:30px 0px;
+    font-family: 'Play', sans-serif;
+    text-align:center;
+    }
+    
+    .footer .row{
+    width:100%;
+    margin:1% 0%;
+    padding:0.6% 0%;
+    color:gray;
+    font-size:0.8em;
+    }
+    
+    .footer .row a{
+    text-decoration:none;
+    color:gray;
+    transition:0.5s;
+    }
+    
+    .footer .row a:hover{
+    color:#fff;
+    }
+    
+    .footer .row ul{
+    width:100%;
+    }
+    
+    .footer .row ul li{
+    display:inline-block;
+    margin:0px 30px;
+    }
+    
+    .footer .row a i{
+    font-size:2em;
+    margin:0% 1%;
+    }
+    
+    @media (max-width:720px){
+    .footer{
+    text-align:left;
+    padding:5%;
+    }
+    .footer .row ul li{
+    display:block;
+    margin:10px 0px;
+    text-align:left;
+    }
+    .footer .row a i{
+    margin:0% 3%;
+    }
+    }
