--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap'); */
 
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,14 +13,13 @@ li>a{
     color:#fff;
 }
 body{
-    /* background-color: #353839; */
-    /* background-color: #131313; */
+   
     background-color: grey;
-    /* background-color: #12343b; */
+
 }
 
 .header-container{
-    /* margin: 10px; */
+   
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,22 +65,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     gap:20px;
-    /* background-color: #353839; */
+  
     color:#fff;
 }
 
-/* .searchbar{
-    width: 400px;
-    height: 40px;
-    margin-block:10px;
-}
 
-.search-btn{
-    height: 40px;
-    padding-inline: 10px;
-    margin-left: 3px;
-
-} */
 
 .searchbar {
     width: 50%;
@@ -166,4 +154,8 @@ body{
     .menu-container{
         display: flex;
         justify-content: space-between;
-    }
+    } */
+
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
